--- a/E-commerceMVCProject/E-commerceMVCProject.csproj
+++ b/E-commerceMVCProject/E-commerceMVCProject.csproj
@@ -35,7 +35,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\images\IPhone 11\" />
+    <Folder Include="wwwroot\images\IPhone 13\" />
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
